--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8c6315; }
+  background: #09da5b; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7c2bec; }
+  background: #65ae74; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #0fce20; }
+  background: #9795a4; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #43808a; }
+  background: #40adb6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f1b41d; }
+  background: #93dee5; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ba3f44; }
+  background: #921bf4; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #9448e2; }
+  background: #fc488a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #ba0591; }
+  background: #6d157a; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #03eb5c; }
+  background: #2fa965; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #c84f30; }
+  background: #48c2cc; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #21d2bc; }
+  background: #a01349; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #4756e3; }
+  background: #502d65; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d61b03; }
+  background: #20cafa; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #963d7a; }
+  background: #e71632; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #41c6ce; }
+  background: #ae77ee; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6ebee5; }
+  background: #ec95bd; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #793483; }
+  background: #3004a2; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #37ae30; }
+  background: #eca4d5; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a01caf; }
+  background: #f8a8f6; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #7027c1; }
+  background: #5143b2; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2969a6; }
+  background: #077de5; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #02f039; }
+  background: #19412f; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a17bd9; }
+  background: #3829ca; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #da45ef; }
+  background: #fc0672; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #924202; }
+  background: #a9dc50; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #898182; }
+  background: #b278fc; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #5f7a73; }
+  background: #c7884a; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #0b1872; }
+  background: #1d0e7b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #4a02a8; }
+  background: #10dad4; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #ce0ca1; }
+  background: #a627a3; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #719879; }
+  background: #6613a4; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c75335; }
+  background: #935b9d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #af5d35; }
+  background: #134d4e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b5a13d; }
+  background: #ac0b65; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6b3c60; }
+  background: #819027; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #fa3fda; }
+  background: #f72295; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #fc8cf6; }
+  background: #038cc8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #facc80; }
+  background: #aac2fd; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f01d41; }
+  background: #9b79c4; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #760660; }
+  background: #93e94b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e70375; }
+  background: #633462; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #294a46; }
+  background: #46e621; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #af870b; }
+  background: #ff0a19; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #35057c; }
+  background: #a041b4; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c28085; }
+  background: #121315; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #09aed7; }
+  background: #29d1cc; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d5e84c; }
+  background: #91e2e1; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #952671; }
+  background: #c9ef2f; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #411ce4; }
+  background: #a4058a; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c77ee9; }
+  background: #209bfd; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b94ba7; }
+  background: #286d85; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f3e519; }
+  background: #4ea4c3; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #aadb17; }
+  background: #068b7e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #7c2fd3; }
+  background: #409e4d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #458e75; }
+  background: #9f2ccd; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #9c9a82; }
+  background: #f79867; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5c85c4; }
+  background: #c55d9a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #b6f2a4; }
+  background: #bb3539; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f29ee6; }
+  background: #8ba938; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #78d645; }
+  background: #59df1b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6ff64b; }
+  background: #ae3c31; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #81e262; }
+  background: #283af2; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #da611e; }
+  background: #65927d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #433223; }
+  background: #03a233; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #9dbbb8; }
+  background: #533eca; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #8963dc; }
+  background: #aad202; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #723c02; }
+  background: #89e7be; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8cbf44; }
+  background: #b215b2; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4d65fb; }
+  background: #aa09b1; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d33da7; }
+  background: #ea220c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #1a719f; }
+  background: #704253; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #9204d4; }
+  background: #831f65; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #365e70; }
+  background: #d1a640; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b78e36; }
+  background: #30502a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #434128; }
+  background: #90740d; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #83ac49; }
+  background: #608aeb; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d361d5; }
+  background: #c606cd; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #90fbdb; }
+  background: #fd1e1d; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #164c45; }
+  background: #607e65; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #9e2387; }
+  background: #0120ce; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #489d86; }
+  background: #e365b2; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8d34f9; }
+  background: #6e6bba; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #cf8663; }
+  background: #f03ad1; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #fe9d49; }
+  background: #f9d6d6; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #8ec53b; }
+  background: #f0d706; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #7852e4; }
+  background: #c1cd08; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #67ecf4; }
+  background: #a9ee31; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #aee1d7; }
+  background: #8bb219; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #678757; }
+  background: #b8d28d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #a17a8e; }
+  background: #272adf; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #a5bab2; }
+  background: #bc30b3; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ea2675; }
+  background: #4f9abf; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #63748f; }
+  background: #fe0ed1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #0a1211; }
+  background: #2401c1; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #9a83fd; }
+  background: #fa53d7; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #699f8f; }
+  background: #c08caf; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0b9e55; }
+  background: #059071; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ee3910; }
+  background: #647605; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #237ad7; }
+  background: #922cbd; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ed4170; }
+  background: #61b625; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -17074,10 +17074,22 @@ input:not(:checked) + .slider-switch > .switch-non {
   text-decoration: none;
   cursor: pointer; }
 
+.guide-logo-text {
+  font-size: 20px;
+  color: #9A9A9A;
+  margin-top: 15px;
+  margin-left: 15px; }
+
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
   .modal-content {
-    width: 100%; } }
+    width: 100%; }
+
+  .guide-logo-text {
+    font-size: 16px;
+    color: #9A9A9A;
+    margin-top: 12px;
+    margin-left: 12px; } }
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
     grid-template-columns: 1fr; }
