--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #09da5b; }
+  background: #dbc7fc; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #65ae74; }
+  background: #94e62b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9795a4; }
+  background: #279037; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #40adb6; }
+  background: #84f638; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #93dee5; }
+  background: #49389c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #921bf4; }
+  background: #7e7ad7; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #fc488a; }
+  background: #7a1c5e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6d157a; }
+  background: #1862d6; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #2fa965; }
+  background: #74ba80; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #48c2cc; }
+  background: #cab2e6; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a01349; }
+  background: #7e12f3; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #502d65; }
+  background: #c8793f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #20cafa; }
+  background: #c216ec; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e71632; }
+  background: #647c28; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ae77ee; }
+  background: #9b098e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ec95bd; }
+  background: #d8fd2b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #3004a2; }
+  background: #89f269; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #eca4d5; }
+  background: #c6946e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #f8a8f6; }
+  background: #65c315; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #5143b2; }
+  background: #c8e40a; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #077de5; }
+  background: #d20e4f; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #19412f; }
+  background: #103f8c; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #3829ca; }
+  background: #b84667; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #fc0672; }
+  background: #f9129f; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a9dc50; }
+  background: #fcaab0; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #b278fc; }
+  background: #41e775; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #c7884a; }
+  background: #7d6eef; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #1d0e7b; }
+  background: #aefe9d; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #10dad4; }
+  background: #ba8050; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a627a3; }
+  background: #737468; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6613a4; }
+  background: #53a224; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #935b9d; }
+  background: #779e67; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #134d4e; }
+  background: #836679; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ac0b65; }
+  background: #63f723; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #819027; }
+  background: #8ff24e; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f72295; }
+  background: #7d767b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #038cc8; }
+  background: #73ac03; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #aac2fd; }
+  background: #eb3aa4; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9b79c4; }
+  background: #610593; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #93e94b; }
+  background: #15b4c6; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #633462; }
+  background: #4ca78f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #46e621; }
+  background: #673d16; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #ff0a19; }
+  background: #9dcd77; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a041b4; }
+  background: #aea292; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #121315; }
+  background: #c2e222; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #29d1cc; }
+  background: #de368e; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #91e2e1; }
+  background: #c9857f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #c9ef2f; }
+  background: #fb6296; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a4058a; }
+  background: #251d8e; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #209bfd; }
+  background: #c2c3d1; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #286d85; }
+  background: #f29234; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4ea4c3; }
+  background: #33872e; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #068b7e; }
+  background: #09ec5e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #409e4d; }
+  background: #f06290; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #9f2ccd; }
+  background: #973c2f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #f79867; }
+  background: #964eba; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c55d9a; }
+  background: #690ddd; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #bb3539; }
+  background: #79e55c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #8ba938; }
+  background: #154228; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #59df1b; }
+  background: #5d4785; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ae3c31; }
+  background: #6b33c4; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #283af2; }
+  background: #dce666; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #65927d; }
+  background: #098fd8; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #03a233; }
+  background: #1ed047; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #533eca; }
+  background: #736339; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #aad202; }
+  background: #a0fb71; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #89e7be; }
+  background: #0cbcc1; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b215b2; }
+  background: #9303c6; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #aa09b1; }
+  background: #d7e196; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ea220c; }
+  background: #892f47; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #704253; }
+  background: #cd8984; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #831f65; }
+  background: #c94bbd; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d1a640; }
+  background: #fde401; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #30502a; }
+  background: #769557; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #90740d; }
+  background: #44c457; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #608aeb; }
+  background: #c5e77a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c606cd; }
+  background: #835d94; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #fd1e1d; }
+  background: #113d52; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #607e65; }
+  background: #f5db6a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0120ce; }
+  background: #1c9496; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #e365b2; }
+  background: #d77eb0; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #6e6bba; }
+  background: #c91e9e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #f03ad1; }
+  background: #b127a9; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #f9d6d6; }
+  background: #84b7f2; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #f0d706; }
+  background: #6d40d2; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c1cd08; }
+  background: #9fc7cb; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a9ee31; }
+  background: #a4f252; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8bb219; }
+  background: #c8c748; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #b8d28d; }
+  background: #df10e6; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #272adf; }
+  background: #38800b; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #bc30b3; }
+  background: #b6cb59; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #4f9abf; }
+  background: #df198e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #fe0ed1; }
+  background: #f145d9; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2401c1; }
+  background: #9c8f64; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #fa53d7; }
+  background: #6ca408; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c08caf; }
+  background: #ba7b34; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #059071; }
+  background: #4b26d4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #647605; }
+  background: #441252; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #922cbd; }
+  background: #baabe5; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #61b625; }
+  background: #4035ce; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -17078,7 +17078,7 @@ input:not(:checked) + .slider-switch > .switch-non {
   font-size: 20px;
   color: #9A9A9A;
   margin-top: 15px;
-  margin-left: 15px; }
+  margin-left: 6px; }
 
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
@@ -17089,7 +17089,7 @@ input:not(:checked) + .slider-switch > .switch-non {
     font-size: 16px;
     color: #9A9A9A;
     margin-top: 12px;
-    margin-left: 12px; } }
+    margin-left: 6px; } }
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
     grid-template-columns: 1fr; }
@@ -17545,6 +17545,9 @@ input:not(:checked) + .slider-switch > .switch-non {
     .tow-boxs-div .box-div .box-img img {
       width: 210px; }
 
+  .guide-table {
+    width: 100%; }
+
   .guide-table th, .guide-table td {
     min-width: 100%; }
 
@@ -17558,10 +17561,15 @@ input:not(:checked) + .slider-switch > .switch-non {
     width: 100%; }
 
   .main {
-    grid-template-columns: 1fr; }
+    display: flex !important;
+    flex-direction: column !important; }
 
   .main #left {
-    display: none; }
+    position: relative !important;
+    width: 100%; }
+
+  .main #left .sliding-left-section ul li a {
+    display: block; }
 
   .guide-img-border-div img, .guide-img-border-div .img-hieght-half {
     height: 100%; } }
