--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #dbc7fc; }
+  background: #383e5d; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #94e62b; }
+  background: #c961d4; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #279037; }
+  background: #3db8a9; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #84f638; }
+  background: #033832; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #49389c; }
+  background: #78ed19; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7e7ad7; }
+  background: #dc2030; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #7a1c5e; }
+  background: #f6614e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #1862d6; }
+  background: #840e5c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #74ba80; }
+  background: #88a675; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #cab2e6; }
+  background: #47342e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #7e12f3; }
+  background: #7dba8e; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c8793f; }
+  background: #0803e6; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c216ec; }
+  background: #846a26; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #647c28; }
+  background: #774fa1; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #9b098e; }
+  background: #d499f4; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #d8fd2b; }
+  background: #420a64; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #89f269; }
+  background: #52088e; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c6946e; }
+  background: #fb5e79; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #65c315; }
+  background: #69e726; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #c8e40a; }
+  background: #216c60; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d20e4f; }
+  background: #53d5a0; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #103f8c; }
+  background: #2b0313; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b84667; }
+  background: #256927; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f9129f; }
+  background: #328afc; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #fcaab0; }
+  background: #0a019b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #41e775; }
+  background: #9c2b97; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #7d6eef; }
+  background: #4bcaf4; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #aefe9d; }
+  background: #2cbfa5; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ba8050; }
+  background: #48e7a8; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #737468; }
+  background: #10f817; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #53a224; }
+  background: #e39b2d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #779e67; }
+  background: #d7b653; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #836679; }
+  background: #d68218; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #63f723; }
+  background: #a3fdc1; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #8ff24e; }
+  background: #b14b26; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #7d767b; }
+  background: #e018b2; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #73ac03; }
+  background: #800317; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #eb3aa4; }
+  background: #1a1167; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #610593; }
+  background: #8e417d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #15b4c6; }
+  background: #219540; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #4ca78f; }
+  background: #ef60f0; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #673d16; }
+  background: #b57fe2; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #9dcd77; }
+  background: #0c43c6; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #aea292; }
+  background: #a121b8; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c2e222; }
+  background: #bd0b35; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #de368e; }
+  background: #c1a6c9; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c9857f; }
+  background: #6e13c2; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #fb6296; }
+  background: #faf95e; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #251d8e; }
+  background: #2c7cd8; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c2c3d1; }
+  background: #c123c4; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #f29234; }
+  background: #ab58d4; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #33872e; }
+  background: #188e0a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #09ec5e; }
+  background: #103bc3; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f06290; }
+  background: #ada06f; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #973c2f; }
+  background: #fdc1d4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #964eba; }
+  background: #0fff5f; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #690ddd; }
+  background: #eaaa54; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #79e55c; }
+  background: #cbcca5; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #154228; }
+  background: #43a149; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #5d4785; }
+  background: #70d55f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6b33c4; }
+  background: #b8cbb1; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #dce666; }
+  background: #1e738e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #098fd8; }
+  background: #798ba2; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #1ed047; }
+  background: #bce8ad; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #736339; }
+  background: #7930ef; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a0fb71; }
+  background: #4f3009; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #0cbcc1; }
+  background: #c41f39; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9303c6; }
+  background: #7a7267; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #d7e196; }
+  background: #b9374d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #892f47; }
+  background: #f97cdb; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #cd8984; }
+  background: #8438e4; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c94bbd; }
+  background: #2803e2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #fde401; }
+  background: #a2c598; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #769557; }
+  background: #e23b7b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #44c457; }
+  background: #3d3709; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #c5e77a; }
+  background: #a46093; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #835d94; }
+  background: #1a30db; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #113d52; }
+  background: #c8df4b; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f5db6a; }
+  background: #4913d9; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1c9496; }
+  background: #0f3e16; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d77eb0; }
+  background: #cb6e3f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c91e9e; }
+  background: #4878d0; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b127a9; }
+  background: #788b65; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #84b7f2; }
+  background: #6f8473; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #6d40d2; }
+  background: #bb6ab2; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #9fc7cb; }
+  background: #b725b0; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a4f252; }
+  background: #8e122a; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c8c748; }
+  background: #c837ad; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #df10e6; }
+  background: #cb4d49; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #38800b; }
+  background: #5e9799; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b6cb59; }
+  background: #f5b8a4; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #df198e; }
+  background: #719cc1; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #f145d9; }
+  background: #0fc8d1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9c8f64; }
+  background: #8c1d6b; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6ca408; }
+  background: #72b071; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ba7b34; }
+  background: #fd0239; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #4b26d4; }
+  background: #7a04d2; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #441252; }
+  background: #a18175; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #baabe5; }
+  background: #ae23ec; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #4035ce; }
+  background: #4f0782; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -17083,13 +17083,7 @@ input:not(:checked) + .slider-switch > .switch-non {
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
   .modal-content {
-    width: 100%; }
-
-  .guide-logo-text {
-    font-size: 16px;
-    color: #9A9A9A;
-    margin-top: 12px;
-    margin-left: 6px; } }
+    width: 100%; } }
 @media screen and (max-width: 767px) {
   .assets-details-modal-field-row {
     grid-template-columns: 1fr; }
@@ -17568,11 +17562,20 @@ input:not(:checked) + .slider-switch > .switch-non {
     position: relative !important;
     width: 100%; }
 
+  .main #left .sliding-left-section {
+    min-width: 100%; }
+
   .main #left .sliding-left-section ul li a {
     display: block; }
 
   .guide-img-border-div img, .guide-img-border-div .img-hieght-half {
-    height: 100%; } }
+    height: 100%; }
+
+  .guide-logo-text {
+    font-size: 16px;
+    color: #9A9A9A;
+    margin-top: 12px;
+    margin-left: 4px; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
